Fix text align hopefully

--- a/public/site_assets/faucet/css/layout-unauthorized.css
+++ b/public/site_assets/faucet/css/layout-unauthorized.css
@@ -872,5 +872,8 @@ font-size: 14px;}
 
 #main .payout_container {
 display: inline-block;
-width:35%;
+}
+
+#main .payout_container fieldset label{
+text-align:left;
 }
